add Proptypes check to Comment.js, changed fontawesome class to className

--- a/instragram/src/components/SearchBar/SearchBar.css
+++ b/instragram/src/components/SearchBar/SearchBar.css
@@ -34,7 +34,7 @@
 }
 
 .searchBar-container input {
-	font-family: FontAwesome, 'Roboto', sans-serif;
+	font-family: 'FontAwesome', 'Roboto', sans-serif;
 	min-width: 125px;
 	width: 215px;
 	height: 24px;
