--- a/instragram/src/components/CommentSection/CommentSection.css
+++ b/instragram/src/components/CommentSection/CommentSection.css
@@ -11,6 +11,7 @@
 .comment-icons i {
 	font-size: 26px;
 	padding: 10px 0;
+	cursor: pointer;
 }
 
 .likes {
@@ -55,6 +56,9 @@
 	font-size: 16px;
 }
 
-.add-comment h3 {
+.add-comment button {
 	font-size: 40px;
+	background: none;
+	border: none;
+	cursor: pointer;
 }
