--- a/instragram/src/components/CommentSection/CommentSection.css
+++ b/instragram/src/components/CommentSection/CommentSection.css
@@ -1,26 +1,26 @@
-.CommentSection {
+/* .CommentSection {
 	width: 95%;
-}
+} */
 
-.comment-icons {
+/* .comment-icons {
 	display: flex;
 	justify-content: space-between;
 	width: 70px;
-}
+} */
 
-.comment-icons i {
+i {
 	font-size: 26px;
 	padding: 10px 0;
 	cursor: pointer;
 }
 
-.likes {
+/* .likes {
 	font-size: 16px;
 	font-weight: bold;
 	padding: 10px 0;
-}
+} */
 
-.Comment {
+/* .Comment {
 	display: flex;
 	flex-wrap: wrap;
 	padding: 5px 0;
@@ -30,15 +30,15 @@
 	font-size: 16px;
 	font-weight: bold;
 	padding-right: 7px;
-}
+} */
 
-.time {
+/* .time {
 	color: gray;
 	font-size: 12px;
 	padding: 7px 0;
-}
+} */
 
-.add-comment {
+/* .add-comment {
 	width: 100%;
 	height: 50px;
 	display: flex;
@@ -46,19 +46,19 @@
 	align-items: baseline;
 	border-top: 1px solid rgb(202, 202, 202);
 	margin: 10px 0;
-}
+} */
 
-.add-comment input {
+/* .add-comment input {
 	width: 90%;
 	height: 95%;
 	border: none;
 	margin: 5px;
 	font-size: 16px;
-}
+} */
 
-.add-comment button {
+/* .add-comment button {
 	font-size: 40px;
 	background: none;
 	border: none;
 	cursor: pointer;
-}
+} */
